2011-02-11	Ralf Corsépius <ralf.corsepius@rtems.org>

	* include/tm27.h, startup/bspstart.c:
	Use "__asm__" instead of "asm" for improved c99-compliance.

2011-02-02	Ralf Corsépius <ralf.corsepius@rtems.org>

	* configure.ac: Require autoconf-2.68, automake-1.11.1.

2010-08-15	Joel Sherrill <joel.sherrilL@OARcorp.com>

	* Makefile.am: Do not use .rel files for libbsp pieces.

2009-12-11	Ralf Corsépius <ralf.corsepius@rtems.org>

	* console/console-io.c: Let eZKit533_BSP_poll_char return int.

2009-10-21	Ralf Corsépius <ralf.corsepius@rtems.org>

	* make/custom/eZKit533.cfg: Remove RTEMS_BSP_FAMILY.

2009-10-21	Ralf Corsépius <ralf.corsepius@rtems.org>

	* make/custom/eZKit533.cfg: Switch to compiling at O2.

2009-10-20	Ralf Corsépius <ralf.corsepius@rtems.org>

	* startup/bspstart.c: Add missing prototype.

2009-10-20	Ralf Corsépius <ralf.corsepius@rtems.org>

	* configure.ac: Don't add -ansi -fasm to CFLAGS.

2009-10-15	Ralf Corsépius <ralf.corsepius@rtems.org>

	* make/custom/eZKit533.cfg: New (relocated from /make/custom).

2009-09-15	Ralf Corsépius <ralf.corsepius@rtems.org>

	* configure.ac: Remove RTEMS_BSP_BOOTCARD_OPTIONS.

 2009-07-16	Joel Sherrill <joel.sherrill@oarcorp.com>

	* configure.ac: Rename BSP_BOOTCARD_OPTIONS to
	RTEMS_BSP_BOOTCARD_OPTIONS. Add RTEMS_BSP_CLEANUP_OPTIONS so all BSPs
	have the same options.

2008-12-04	Joel Sherrill <joel.sherrill@oarcorp.com>

	* bsp_specs: Move -e start from *link to *startfile to avoid warning
	for undefined entry symbol when linking relocatables with binutils
	2.19.

2008-09-29	Ralf Corsépius <ralf.corsepius@rtems.org>

	* Makefile.am: Eliminate bsp.am. Build startup files as side-effect 
	of building libbspstart.a, using automake-rules.

2008-09-29	Ralf Corsépius <ralf.corsepius@rtems.org>

	* Makefile.am: Eliminate *_SOURCES.

2008-09-29	Ralf Corsépius <ralf.corsepius@rtems.org>

	* Makefile.am: Move noinst_LIBRARIES = libbsp.a before its
	components.

2008-09-26	Ralf Corsépius <ralf.corsepius@rtems.org>
